package sia.abstract_factory;

public class NYCheesePizza extends Pizza {
    public NYCheesePizza(NYIngredientsPizzaFactory factory) {
        super(factory);
    }
}
